--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                     <ul class="main_menu">
 
                         <li class="main_menu__item main_menu__item__dropdown active">
-                            <a class="main_menu__link" href="#">Остекление квартиры</a>
+                            <a class="main_menu__link" href="#">
+                                Остекление квартиры
+                            </a>
 
                             <div class="main_menu__submenu_box">
                                 <div class="main_menu__submenu_wrapper">
@@ -518,7 +520,10 @@
                     <ul class="main_menu">
 
                         <li class="main_menu__item main_menu__item__dropdown">
-                            <a class="main_menu__link" href="#">Остекление квартиры</a>
+                            <a class="main_menu__link" href="#">
+                                <img src="img/menu/icon-41.svg" alt="" class="main_menu__icon">
+                                Остекление квартиры
+                            </a>
 
                             <div class="main_menu__submenu_box">
                                 <div class="main_menu__submenu_wrapper">
@@ -575,7 +580,10 @@
                         </li>
 
                         <li class="main_menu__item main_menu__item__dropdown">
-                            <a class="main_menu__link" href="#">Загородное остекление</a>
+                            <a class="main_menu__link" href="#">
+                                <img src="img/menu/icon-42.svg" alt="" class="main_menu__icon">
+                                Загородное остекление
+                            </a>
 
                             <div class="main_menu__submenu_box">
                                 <div class="main_menu__submenu_wrapper">
@@ -659,7 +667,10 @@
                         </li>
 
                         <li class="main_menu__item main_menu__item__dropdown">
-                            <a class="main_menu__link" href="#">Офисное остекление</a>
+                            <a class="main_menu__link" href="#">
+                                <img src="img/menu/icon-43.svg" alt="" class="main_menu__icon">
+                                Офисное остекление
+                            </a>
 
                             <div class="main_menu__submenu_box">
                                 <div class="main_menu__submenu_wrapper">
@@ -1144,8 +1155,9 @@
                     </button>
                     <button class="search_close" type="button" aria-label="Закрыть панель поиска">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                            <path d="M2.14645 2.85355C1.95118 2.65829 1.95118 2.34171 2.14645 2.14645C2.34171 1.95118 2.65829 1.95118 2.85355 2.14645L8 7.29289L13.1464 2.14645C13.3417 1.95118 13.6583 1.95118 13.8536 2.14645C14.0488 2.34171 14.0488 2.65829 13.8536 2.85355L8.70711 8L13.8536 13.1464C14.0488 13.3417 14.0488 13.6583 13.8536 13.8536C13.6583 14.0488 13.3417 14.0488 13.1464 13.8536L8 8.70711L2.85355 13.8536C2.65829 14.0488 2.34171 14.0488 2.14645 13.8536C1.95119 13.6583 1.95119 13.3417 2.14645 13.1464L7.29289 8L2.14645 2.85355Z" fill="#3E3E40" stroke="#3E3E40" stroke-linecap="round" stroke-linejoin="round"/>
-                          </svg>
+                            <path d="M2.14645 2.85355C1.95118 2.65829 1.95118 2.34171 2.14645 2.14645C2.34171 1.95118 2.65829 1.95118 2.85355 2.14645L8 7.29289L13.1464 2.14645C13.3417 1.95118 13.6583 1.95118 13.8536 2.14645C14.0488 2.34171 14.0488 2.65829 13.8536 2.85355L8.70711 8L13.8536 13.1464C14.0488 13.3417 14.0488 13.6583 13.8536 13.8536C13.6583 14.0488 13.3417 14.0488 13.1464 13.8536L8 8.70711L2.85355 13.8536C2.65829 14.0488 2.34171 14.0488 2.14645 13.8536C1.95119 13.6583 1.95119 13.3417 2.14645 13.1464L7.29289 8L2.14645 2.85355Z"
+                                  fill="#3E3E40" stroke="#3E3E40" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
                     </button>
                 </form>
             </div>
